--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Notes 
+title:          My Notes 
 description:    "My Public notes about everything"
 baseurl:        "/notes"
 url:            "https://nrdybhu1.github.io"
